chore: update project configuration and prepare for upload

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="/cerebro-artificial.png" />
     <title>Hector Cardenas | MLOps Engineer & AI Engineer</title>
     <meta name="description" content="MLOps Engineer & AI Engineer specializing in Generative AI, RAG Systems, and SAP Enterprise Analytics. Building scalable AI solutions." />
     <meta name="keywords" content="MLOps, AI Engineer, Machine Learning, Generative AI, RAG, SAP, Enterprise Analytics, LLM" />
